--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+SimpleDataProject/x64/
+SimpleDataUnitTest/x64/
+crossguid/x64/
+
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
